<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:background="@color/colorPrimaryDark"
    tools:context="collectdesigns.musical_structure.PurchaseActivity">

    <android.support.constraint.ConstraintLayout
        style="@style/Layout">

        <TextView
            android:id="@+id/success_activity_label"
            android:text="@string/successactivity_label"
            style="@style/ActivityStyle"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/marginTop"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/success_activity_description"
            style="@style/ActivityStyle"
            android:text="@string/successactivity_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/success_activity_label"
            />

        <TextView
            android:id="@+id/thankyou"
            android:layout_width="fill_parent"
            android:text="@string/thankyou_message"
            android:background="@color/colorAccent"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@+id/success_activity_description"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/Label"/>

        <TextView
            android:id="@+id/home"
            android:text="@string/home_button"
            app:layout_constraintTop_toBottomOf="@+id/thankyou"
            app:layout_constraintLeft_toLeftOf="parent"
            style="@style/Label"/>


    </android.support.constraint.ConstraintLayout>

</ScrollView>
