<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:clipToPadding="false"
    android:fillViewport="true"
    android:background="@color/colorPrimaryDark"
    tools:context="collectdesigns.musical_structure.PlayActivity">

    <android.support.constraint.ConstraintLayout
        style="@style/Layout">
        <TextView
            android:id="@+id/play_activity_label"
            android:text="@string/playingactivity_label"
            style="@style/ActivityStyle"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/marginTop"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/play_activity_description"
            style="@style/ActivityStyle"
            android:text="@string/playingactivity_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/play_activity_label"
            />

        <TextView
            android:id="@+id/backIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:layout_marginTop="@dimen/marginTopFromDescription"
            app:layout_constraintTop_toBottomOf="@+id/play_activity_description" />

        <TextView
            android:id="@+id/songTitleLarge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/songTitle"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorBorderButton"
            android:layout_marginTop="@dimen/marginTopFromDescription"
            app:layout_constraintTop_toBottomOf="@+id/play_activity_description" />

        <TextView
            android:id="@+id/artistLarge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/songArtist"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/colorBorderButton"
            app:layout_constraintTop_toBottomOf="@+id/songTitleLarge" />

        <ImageView
            android:id="@+id/songImageLarge"
            android:contentDescription="@string/imageDescription"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/background"
            android:scaleType="centerCrop"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artistLarge"
            />

        <TextView
            android:id="@+id/followButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follow"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/colorBorderButton"
            android:background="@drawable/button"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/songImageLarge" />

        <TextView
            android:id="@+id/bar"
            android:layout_width="fill_parent"
            style="@style/MusicBar"
            android:background="@color/colorBar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/followButton"
            />

        <TextView
            android:id="@+id/progress"
            android:layout_width="100dp"
            style="@style/MusicBar"
            android:background="@color/colorBorderButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/followButton"
            />

        <ImageView
            android:id="@+id/pauseIcon"
            android:contentDescription="@string/imageDescription"
            android:layout_width="80dp"
            style="@style/MusicControl"
            android:src="@drawable/ic_pause_circle_outline_black_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bar"
            />

        <ImageView
            android:id="@+id/skipNextIcon"
            android:contentDescription="@string/imageDescription"
            android:layout_width="40dp"
            style="@style/MusicControl"
            android:src="@drawable/ic_skip_next_black_24dp"
            app:layout_constraintLeft_toRightOf="@+id/pauseIcon"
            app:layout_constraintTop_toBottomOf="@+id/bar"
            />

        <ImageView
            android:id="@+id/repeatIcon"
            android:contentDescription="@string/imageDescription"
            android:layout_width="20dp"
            style="@style/MusicControl"
            android:src="@drawable/ic_repeat_black_24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/skipNextIcon"
            app:layout_constraintTop_toBottomOf="@+id/bar"
            />

        <ImageView
            android:id="@+id/skipPreviousIcon"
            android:contentDescription="@string/imageDescription"
            android:layout_width="40dp"
            style="@style/MusicControl"
            android:src="@drawable/ic_skip_previous_black_24dp"
            app:layout_constraintRight_toLeftOf="@+id/pauseIcon"
            app:layout_constraintTop_toBottomOf="@+id/bar"
            />

        <ImageView
            android:id="@+id/shuffleIcon"
            android:contentDescription="@string/imageDescription"
            android:layout_width="20dp"
            style="@style/MusicControl"
            android:src="@drawable/ic_shuffle_black_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/skipPreviousIcon"
            app:layout_constraintTop_toBottomOf="@+id/bar"
            />

    </android.support.constraint.ConstraintLayout>

</ScrollView>
